--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -97,9 +97,10 @@
 
             </form>
       </div>
-      <div class="card-footer text-muted text-center">
-        Dave Evans built this website in collaboration with MOSH and the Wilson Lab, which developed the Green CovR
-        algorithm.
+      <div class="card-footer text-muted text-center" style="font-size: small;">
+        This website is a collaboration between <a href="https://mosh.umn.edu">MOSH</a> and the <a
+          href="https://wilsonlab.cfans.umn.edu/">Wilson Lab</a>, which developed the Green CovR
+        algorithm and Evans Geospatial.
       </div>
 
     </div>
